Refactor Offer module